a simple bot created (can play with players and bots).